--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,11 @@ indent_size = 2
 [*.jsx]
 indent_style = space
 indent_size = 2
+
+[*.css]
+indent_style = space
+indent_size = 2
+
+[*.scss]
+indent_style = space
+indent_size = 2
