--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.4.3",
     "date-fns": "^2.14.0",
+    "js-cookie": "^2.2.1",
     "marksy": "^8.0.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
