--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.4.3",
     "date-fns": "^2.14.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "marksy": "^8.0.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
